<resources>
    <string name="app_name">KCTV</string>
    <string name="company_name">(주)KCTV제주방송</string>
    <string name="empty_description"></string>
    <string name="copyright" translatable="false">© JIN.N.HYUN</string>

    <string name="msg_error_splash1">Permissions can be modified in Device Settings.</string>
    <string name="msg_error_splash2">Permission need to search network well.</string>
    <string name="main_toast1">Connected Happypoint</string>
    <string name="main_toast_loading">Connecting...</string>
    <string name="main_toast_failed">Connection failed.</string>
    <string name="enex_message1">아래 \'출/퇴근\'버튼을 클릭하여 \n근태관리를 할 수 있습니다.</string>

    <string name="code_description">다른 기기에서 위의 \'사용자 이름\'과 \n\'암호\'를 입력하여 연결합니다.</string>
    <string name="string_button_connect">안전한 WiFi 연결하기</string>
    <string name="string_button_detail">다른 기기에서 WiFi 연결하기</string>
    <string name="string_button_guide">사용방법 보기</string>
    <string name="string_button_notice">공지 확인하기</string>
    <string name="string_button_exit">출퇴근 관리하기</string>

</resources>
